# loudness-server

./: .gitignore  Cargo.toml  README.md  example_config.json  flake.nix
.github/workflows/: build.yml
src/: config.rs  main.rs  web_server.rs
web/: index.html
